[package]
name = "acre"
version = "0.1.0"
edition = "2021"

[dependencies]
mime = "0.3"
axum = { version = "0.6.18", features = ["default", "headers", "http2"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
futures = "0.3.26"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
