[package]
name = "atest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_repr = "0.1.20"
maud = { version = "*", features = ["axum"] }
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["fs", "compression-full"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
rand = "0.9.2"
futures-util = "0.3.31"
